--- a/PowerPointToPDFLibrary/OfficeInterop.csproj
+++ b/PowerPointToPDFLibrary/OfficeInterop.csproj
@@ -42,7 +42,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="PPTXExporter.cs" />
+    <Compile Include="PowerPointInteropLibrary.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
